--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -47,10 +47,10 @@
   width: 44px;
   height: 44px;
   margin-left: 10px;
-}
 
-.soc-icon-item:first-child {
-  margin-left: 0;
+  &:first-child {
+    margin-left: 0;
+  }
 }
 
 .soc-icon-link {
@@ -65,14 +65,14 @@
   transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--second-text-color);
+  }
 }
 
 .soc-icon {
   fill: currentColor;
-}
-
-.soc-icon-link:hover,
-.soc-icon-link:focus {
-  background-color: var(--accent-color);
-  color: var(--second-text-color);
 }
