--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -13,9 +13,9 @@
   border: 0;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.btn:hover,
-.btn:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
