--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -24,14 +24,14 @@
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .clients-icon {
   fill: currentColor;
-}
-
-.clients-icon-link:hover,
-.clients-icon-link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
 }
