--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -57,28 +57,29 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover,
-.link:focus,
-.contact-link:hover,
-.contact-link:focus {
-  color: var(--accent-color);
+.link,
+.contact-link {
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .current {
   position: relative;
   color: var(--accent-color);
-}
 
-.current::after {
-  display: block;
-  content: "";
-  position: absolute;
-  bottom: 0;
-  transform: translateY(1px);
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
+  &::after {
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    transform: translateY(1px);
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+  }
 }
 
 .contact-link {
