--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,7 +11,6 @@
 .filter-btn {
   color: var(--title-text-color);
   background-color: var(--portfolio-backgr-color);
-  cursor: pointer;
 
   font-weight: 500;
   font-size: 16px;
@@ -25,14 +24,14 @@
   transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.filter-btn:hover,
-.filter-btn:focus {
-  color: var(--second-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:hover,
+  &:focus {
+    color: var(--second-text-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .portfolio-link {
@@ -68,11 +67,11 @@
 
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-link:hover .product-desc,
-.portfolio-link:focus .product-desc {
-  transform: translateY(0);
+  .portfolio-link:hover &,
+  .portfolio-link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .portfolio-desc {
@@ -98,10 +97,10 @@
 
 .portfolio-content {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-link:hover .portfolio-content,
-.portfolio-link:focus .portfolio-content {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  .portfolio-link:hover &,
+  .portfolio-link:focus & {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
