--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,6 +1,6 @@
 .work-title,
-.team-title,
-.clients-title {
+.team__title,
+.clients__title {
   margin-bottom: 50px;
   color: var(--title-text-color);
 
