--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,35 +3,35 @@
   background-color: var(--special-backgr-color);
 }
 
-.footer-content {
+.footer__content {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
 }
 
-.bottom-logo {
+.contact-address__logo {
   display: inline-block;
   margin-bottom: 20px;
 }
 
-.logo-footer,
-.location {
+.logo--color-light {
   color: var(--second-text-color);
 }
 
-.location,
-.contact-item:not(:last-child) {
+.contact-address__location {
+  font-style: normal;
+  line-height: 1.71;
+  color: var(--second-text-color);
   margin-bottom: 9px;
 }
 
-.footer-contacts,
-.location {
-  font-style: normal;
-  line-height: 1.71;
+.connect-list__item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
-.footer-link {
+.connect-list__link {
   text-decoration: none;
+  line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -41,7 +41,7 @@
   }
 }
 
-.actions-footer {
+.action-title {
   margin-bottom: 20px;
   color: var(--second-text-color);
   font-weight: 700;
@@ -50,7 +50,7 @@
   text-transform: uppercase;
 }
 
-.social-link {
+.soc-list__link--color-light {
   color: var(--second-text-color);
   background-color: rgba(100%, 100%, 100%, 10%);
 }
@@ -77,13 +77,13 @@
   }
 }
 
-.send-btn {
+.newsletter__btn {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   margin-left: 8px;
 }
 
-.icon-send {
+.newsletter__icon {
   margin-left: 10px;
 }
