--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,22 +2,26 @@
   border-bottom: 1px solid #ececec;
 }
 
-.header-conteiner {
+.header__conteiner {
   display: flex;
   align-items: center;
 }
 
-.header-nav {
+.nav {
   display: flex;
   align-items: center;
 }
 
-.menu-nav {
+.menu {
   display: flex;
+}
+
+.nav__menu {
   margin-left: 93px;
 }
 
-.item:not(:last-child) {
+.menu__item:not(:last-child),
+.contacts__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -36,18 +40,18 @@
   line-height: 1.19;
 }
 
-.logo-header {
+.logo--color-dark {
   color: #000000;
 }
 
-.menu-nav,
+.menu,
 .contacts {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
-.link {
+.menu__link {
   display: block;
   padding: 32px 0;
 
@@ -57,15 +61,15 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link,
-.contact-link {
+.menu__link,
+.contacts__link {
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
 }
 
-.current {
+.menu__link--current-color {
   position: relative;
   color: var(--accent-color);
 
@@ -82,7 +86,7 @@
   }
 }
 
-.contact-link {
+.contacts__link {
   display: flex;
   align-items: center;
   padding: 32px 0;
@@ -93,7 +97,7 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon {
+.contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
